--- a/blog.html
+++ b/blog.html
@@ -80,12 +80,12 @@
       <!-- END Module Navigation-->
   </header>
     
-  <section class="head-section">
+  <section class="head-section animista fade-in-bottom">
     <div class="wrapper">
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <span class="subtitle">SOMOS CURIOSOS</span>
-          <h2>Explore os nossos<br> artigos & casos de estudo</h2>
+          <span class="subtitle anim-delay-0-1">SOMOS CURIOSOS</span>
+          <h2><span class="anim-delay-0-2">Explore</span> <span class="anim-delay-0-3">os</span> <span class="anim-delay-0-4">nossos</span><br> <span class="anim-delay-0-5">artigos</span> <span class="anim-delay-0-6">&</span> <span class="anim-delay-0-7">casos</span> <span class="anim-delay-0-8">de</span> <span class="anim-delay-0-9">estudo</span></h2>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12"></div>
       </div>
@@ -93,17 +93,17 @@
   </section>
   <section class="blog section-1">
     <div class="larger-wrapper">
-      <div class="row banner-img">
+      <div class="row banner-img animista slide-in-left">
         <div class="col-lg-9 col-md-9">
-            <img class="img-fluid" src="img/insight-img.jpg">
+            <img class="img-fluid anim-delay-1" src="img/insight-img.jpg">
         </div>
         <div class="col-lg-3 col-md-3"></div>
       </div>
       <div class="row">
         <div class="col-lg-6 col-md-6">
         </div>
-        <div class="col-lg-6 col-md-6">
-          <div class="primary-article">
+        <div class="col-lg-6 col-md-6 animista fade-in-bottom">
+          <div class="primary-article anim-delay-2">
             <span class="subtitle">ARTIGO 01 SET 2020</span><br>
             <h3 class="article-title">INOBUZZ: Otimização de recursos em contexto digital</h3>
             <span class="article-short">Marque presença na Live através do Facebook ou do Youtube, no próximo dia 7 de Outubro, pelas 18H.</span><br>
@@ -114,10 +114,10 @@
     </div>
   </section>
 
-  <section class="blog section-2">
+  <section class="blog section-2 animista fade-in-bottom">
     <div class="wrapper">
       <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-12">
+        <div class="col-lg-6 col-md-6 col-sm-12 anim-delay-1">
           <div class="padding-right">
             <a href="./blogpost.html">
               <img class="img-fluid" src="img/01-servicos-img.jpg">
@@ -130,7 +130,7 @@
             </a>
           </div>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-12">
+        <div class="col-lg-6 col-md-6 col-sm-12 anim-delay-2">
           <div class="padding-left">
             <a href="./blogpost.html">
               <img class="img-fluid" src="img/02-servicos-img.jpg">
@@ -143,7 +143,7 @@
             </a>
           </div>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-12">
+        <div class="col-lg-6 col-md-6 col-sm-12 anim-delay-3">
           <div class="padding-right">
             <a href="./blogpost.html">
               <img class="img-fluid" src="img/01-servicos-img.jpg">
@@ -156,7 +156,7 @@
             </a>
           </div>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-12">
+        <div class="col-lg-6 col-md-6 col-sm-12 anim-delay-4">
           <div class="padding-left">
             <a href="./blog.html">
               <img class="img-fluid" src="img/02-servicos-img.jpg">
@@ -173,23 +173,23 @@
     </div>
   </section>
   
-  <div class="btn-container">
-  <a class="btn-blue-ball btn-light" href="#"><div class="btnball"><img class="btn-img" src="img/arrow-down.svg"></div><span>Ver Mais</span></a>
+  <div class="btn-container animista fade-in-bottom">
+  <a class="btn-blue-ball btn-light anim-delay-1" href="#"><div class="btnball"><img class="btn-img" src="img/arrow-down.svg"></div><span>Ver Mais</span></a>
   </div>
 
-  <section class="blog section-3">
+  <section class="blog section-3 animista fade-in-bottom">
 
     <div class="larger-wrapper">
       <div class="row team align-center">
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <div class="padding-right">
+          <div class="padding-right anim-delay-1">
             <img class="img-fluid" src="img/team-img.png">
           </div>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
           <div class="padding-left">
-            <span class="subtitle">SOMOS BUZZBEAT</span>
-            <h2>Somos uma equipa<br> de especialistas<br> ao seu dispor</h2>
+            <span class="subtitle anim-delay-0-2">SOMOS BUZZBEAT</span>
+            <h2><span class="anim-delay-0-3">Somos</span> <span class="anim-delay-0-4">uma</span> <span class="anim-delay-0-5">equipa</span><br> <span class="anim-delay-0-6">de</span> <span class="anim-delay-0-7">especialistas</span><br> <span class="anim-delay-0-8">ao</span> <span class="anim-delay-0-9">seu</span> <span class="anim-delay-0-10">dispor</span></h2>
             <p>Trabalhamos lado a lado para que os seus projetos alcancem o máximo potencial</p>
             <a class="btn-blue-ball btn-dark" href="./sobre.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Sobre Nós</span></a>
           </div>
@@ -289,6 +289,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
+  <script src="https://unpkg.com/intersection-observer"></script>
+  <script src="https://unpkg.com/scrollama"></script>
   <script src="js/owl.carousel.js"></script>
   <script src="js/main.js"></script>
 
