--- a/contactos.html
+++ b/contactos.html
@@ -81,9 +81,9 @@
 
   <section>
     <div class="wrapper">
-      <div class="row contact-blue">
+      <div class="row contact-blue animista fade-in-bottom">
         <div class="col-lg-5 col-md-5 col-sm-12">
-          <div class="blue-board padding-right">
+          <div class="blue-board padding-right anim-delay-1">
             <h3>Comece hoje a transformar o seu projeto</h3>
             <a href="tel:+351211383266">(+351) 211 383 266</a><br>
             <a href="mailto:info@buzzbeat.pt">info@buzzbeat.pt</a>
@@ -95,25 +95,25 @@
         </div>
         <div class="col-lg-7 col-md-7 col-sm-12">
           <div class="padding-left">
-            <p>Estamos onde o seu negócio mais precisa</p>
+            <p class="anim-delay-2">Estamos onde o seu negócio mais precisa</p>
           </div>
         </div>
       </div>
-      <div class="row contact-img">
+      <div class="row contact-img animista slide-in-right">
         <div class="col-lg-4 col-md-4 col-sm-12"></div>
         <div class="col-lg-8 col-md-8 col-sm-12">
-          <img class="img-fluid" src="img/01-contacts-img.jpg">
+          <img class="img-fluid anim-delay-3" src="img/01-contacts-img.jpg">
         </div>
       </div>
     </div>
   </section>
 
-  <section class="contact section-2">
+  <section class="contact section-2 animista fade-in-bottom">
     <div class="wrapper">
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <span class="subtitle">OBJETIVOS & metas</span>
-          <h3>Do local ao global,<br> trabalhamos com pessoas e<br> marcas que ambicionam mais<br> e melhor.</h3>
+          <span class="subtitle anim-delay-0-1">OBJETIVOS & metas</span>
+          <h3><span class="anim-delay-0-2">Do</span> <span class="anim-delay-0-3">local</span> <span class="anim-delay-0-4">ao</span> <span class="anim-delay-0-5">global,</span><br> <span class="anim-delay-0-6">trabalhamos</span> <span class="anim-delay-0-7">com</span> <span class="anim-delay-0-8">pessoas</span> <span class="anim-delay-0-9">e</span><br> <span class="anim-delay-0-10">marcas</span> <span class="anim-delay-0-11">que</span> <span class="anim-delay-0-12">ambicionam</span> <span class="anim-delay-0-13">mais</span><br> <span class="anim-delay-0-14">e</span> <span class="anim-delay-0-15">melhor.</span></h3>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12"></div>
       </div>
@@ -121,18 +121,18 @@
   </section>
 
   <footer>
-    <section class="footer-1">
+    <section class="footer-1 animista fade-in-bottom">
       <div class="wrapper">
         <div class="row align-center">
           <div class="col-lg-5 col-md-5 col-sm-12 order-second">
-            <span class="subtitle">FALE CONNOSCO</span>
-            <p>Estamos disponíveis para receber<br> as suas propostas ou esclarecer<br> qualquer questão.</p>
-            <p>Diga-nos o motivo do seu<br> contacto.</p>
-            <a class="btn" href="">Iniciar um Projeto</a>
-            <a class="contact-btn btn-blue-ball btn-dark" href="./sobre.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Saber mais sobre a Buzzbeat</span></a>
+            <span class="subtitle anim-delay-0-1">FALE CONNOSCO</span>
+            <p><span class="anim-delay-0-2">Estamos disponíveis para receber</span><br> <span class="anim-delay-0-3">as suas propostas ou esclarecer</span><br> <span class="anim-delay-0-5">qualquer questão.</span></p>
+            <p><span class="anim-delay-0-6">Diga-nos o motivo do seu</span><br> <span class="anim-delay-0-7">contacto.</span></p>
+            <a class="btn anim-delay-3" href="">Iniciar um Projeto</a>
+            <a class="contact-btn btn-blue-ball btn-dark anim-delay-4" href="./sobre.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Saber mais sobre a Buzzbeat</span></a>
           </div>
-          <div class="col-lg-7 col-md-7 col-sm-12 order-first">
-            <div class="footer-form">
+          <div class="col-lg-7 col-md-7 col-sm-12 order-first animista slide-in-right">
+            <div class="footer-form anim-delay-4">
               <span class="subtitle">FALE CONNOSCO</span>
               <h2>Vamos transformar<br> o seu negócio?</h2>
               <form>
@@ -210,6 +210,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
+  <script src="https://unpkg.com/intersection-observer"></script>
+  <script src="https://unpkg.com/scrollama"></script>
   <script src="js/owl.carousel.js"></script>
   <script src="js/main.js"></script>
 
