--- a/sobre.html
+++ b/sobre.html
@@ -80,21 +80,21 @@
       <!-- END Module Navigation-->
   </header>
 
-  <section class="head-section">
+  <section class="head-section animista fade-in-bottom">
     <div class="wrapper">
       <div class="row align-bottom">
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <h1>Somos<br>Buzzbeat</h1>
+          <h1><span class="anim-delay-0-1">Somos</span><br><span class="anim-delay-0-2">Buzzbeat</span></h1>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <p>A agência de estratégia digital focada na solução para os seus projetos</p>
+          <p class="anim-delay-2">A agência de estratégia digital focada na solução para os seus projetos</p>
         </div>
       </div>
     </div>
   </section>
 
-  <div class="larger-wrapper">
-    <div class="about video-banner-wrap">
+  <div class="larger-wrapper animista fade-in-bottom">
+    <div class="about video-banner-wrap anim-delay-3">
       <div class="play-btn"><img src="./img/play-btn.svg"></div>
       <video poster="./img/video-about-us.jpg">
         <source src="movie.mp4" type="video/mp4">
@@ -103,22 +103,22 @@
     </div>
   </div>
 
-  <section class="about section-1">
+  <section class="about section-1 animista fade-in-bottom">
     <div class="wrapper">
       <div class="row align-top">
         <div class="col-lg-12 col-md-12 col-sm-12">
-          <span class="subtitle">COMPROMISSO</span>
+          <span class="subtitle anim-delay-0-1">COMPROMISSO</span>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12">
           <div class="padding-right">
-            <h3>A adicionar valor ao mercado digital desde 2009</h3>
+            <h3><span class="anim-delay-0-2">A</span> <span class="anim-delay-0-3">adicionar</span> <span class="anim-delay-0-4">valor</span> <span class="anim-delay-0-5">ao</span> <span class="anim-delay-0-6">mercado</span> <span class="anim-delay-0-7">digital</span> <span class="anim-delay-0-8">desde</span> <span class="anim-delay-0-9">2009</span></h3>
           </div>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-12"></div>
         <div class="col-lg-6 col-md-6 col-sm-12">
           <div class="padding-left">
-            <p class="lead">A Buzzbeat é a soma das capacidades técnicas, estratégicas e criativas, que trabalham no sentido de transformar projetos, serviços, marcas em experiências de valor tanto para as pessoas como para as empresas</p>
-            <p class="lead">Estamos lado a lado com as empresas e marcas para desenhar a sua estratégia, repensar a sua presença no mercado, transformar digitalmente o seu negócio.</p>
+            <p class="lead anim-delay-4">A Buzzbeat é a soma das capacidades técnicas, estratégicas e criativas, que trabalham no sentido de transformar projetos, serviços, marcas em experiências de valor tanto para as pessoas como para as empresas</p>
+            <p class="lead anim-delay-5">Estamos lado a lado com as empresas e marcas para desenhar a sua estratégia, repensar a sua presença no mercado, transformar digitalmente o seu negócio.</p>
           </div>
         </div>
       </div>
@@ -128,15 +128,15 @@
   <section class="about section-2">
     <div class="service-wrapper">
       <div class="row align-center">
-        <div class="col-lg-8 col-md-8 col-sm-12">
-          <div class="img-blue padding-right"><img class="img-fluid" src="img/01-about_us-img.jpg"></div>
+        <div class="col-lg-8 col-md-8 col-sm-12 animista slide-in-left">
+          <div class="img-blue padding-right anim-delay-1"><img class="img-fluid" src="img/01-about_us-img.jpg"></div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12">
+        <div class="col-lg-4 col-md-4 col-sm-12 animista fade-in-bottom">
           <div class="padding-right">
-            <span class="subtitle">DEFINIMOS</span>
-            <h3>Estratégia</h3>
-            <p>Criamos planos para atingir os seus objetivos mais cedo.</p>
-            <p>Que tipo de serviços, experiências, abordagens podem ser incluídas na parte de serviços prestados de Estratégia</p>
+            <span class="subtitle anim-delay-0-4">DEFINIMOS</span>
+            <h3 class="anim-delay-0-5">Estratégia</h3>
+            <p class="anim-delay-0-6">Criamos planos para atingir os seus objetivos mais cedo.</p>
+            <p class="anim-delay-0-7">Que tipo de serviços, experiências, abordagens podem ser incluídas na parte de serviços prestados de Estratégia</p>
           </div>
         </div>
       </div>
@@ -146,14 +146,14 @@
   <section class="about section-2">
     <div class="service-wrapper odd">
       <div class="row align-center">
-        <div class="col-lg-8 col-md-8 col-sm-12 go-right">
-          <div class="img-blue odd padding-left"><img class="img-fluid" src="img/02-about_us-img.jpg"></div>
+        <div class="col-lg-8 col-md-8 col-sm-12 go-right animista slide-in-right">
+          <div class="img-blue odd padding-left anim-delay-1"><img class="img-fluid" src="img/02-about_us-img.jpg"></div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 go-left">
+        <div class="col-lg-4 col-md-4 col-sm-12 go-left animista fade-in-bottom">
           <div class="padding-left">
-            <span class="subtitle">PENSAMOS</span>
-            <h3>Marketing</h3>
-            <p>Que tipo de serviços, experiências, abordagens podem ser incluídas na parte de serviços prestados de Marketing</p>
+            <span class="subtitle anim-delay-0-4">PENSAMOS</span>
+            <h3 class="anim-delay-0-5">Marketing</h3>
+            <p class="anim-delay-0-6">Que tipo de serviços, experiências, abordagens podem ser incluídas na parte de serviços prestados de Marketing</p>
           </div>
         </div>
       </div>  
@@ -163,14 +163,14 @@
   <section class="about section-2">
     <div class="service-wrapper">
       <div class="row align-center">
-        <div class="col-lg-8 col-md-8 col-sm-12">
-          <div class="img-blue padding-right"><img class="img-fluid" src="img/03-about_us-img.jpg"></div>
+        <div class="col-lg-8 col-md-8 col-sm-12 animista slide-in-left">
+          <div class="img-blue padding-right anim-delay-1"><img class="img-fluid" src="img/03-about_us-img.jpg"></div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12">
+        <div class="col-lg-4 col-md-4 col-sm-12 animista fade-in-bottom">
           <div class="padding-right">
-            <span class="subtitle">PRODUZIMOS</span>
-            <h3>Criatividade<br> & Desenvolvimento</h3>
-            <p>Que tipo de serviços, experiências, abordagens podem ser incluídas na parte de serviços prestados de Criatividade & Desenvolvimento</p>
+            <span class="subtitle anim-delay-0-4">PRODUZIMOS</span>
+            <h3 class="anim-delay-0-5">Criatividade<br> & Desenvolvimento</h3>
+            <p class="anim-delay-0-6">Que tipo de serviços, experiências, abordagens podem ser incluídas na parte de serviços prestados de Criatividade & Desenvolvimento</p>
           </div>
         </div>
       </div> 
@@ -180,29 +180,29 @@
   <section class="about section-2">
     <div class="service-wrapper odd">
       <div class="row align-center">
-        <div class="col-lg-8 col-md-8 col-sm-12 go-right">
-          <div class="img-blue odd padding-left"><img class="img-fluid" src="img/04-about_us-img.jpg"></div>
+        <div class="col-lg-8 col-md-8 col-sm-12 go-right animista slide-in-right">
+          <div class="img-blue odd padding-left anim-delay-1"><img class="img-fluid" src="img/04-about_us-img.jpg"></div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 go-left">
+        <div class="col-lg-4 col-md-4 col-sm-12 go-left animista fade-in-bottom">
           <div class="padding-left">
-            <span class="subtitle">Atuamos</span>
-            <h3>Formação</h3>
-            <p>Que tipo de serviços, experiências, abordagens podem ser incluídas na parte de serviços prestados de Marketing</p>
+            <span class="subtitle anim-delay-0-4">Atuamos</span>
+            <h3 class="anim-delay-0-5">Formação</h3>
+            <p class="anim-delay-0-6">Que tipo de serviços, experiências, abordagens podem ser incluídas na parte de serviços prestados de Marketing</p>
           </div>
         </div>
       </div>  
     </div>
   </section>
 
-  <section class="about section-3">
+  <section class="about section-3 animista fade-in-bottom">
     <div class="wrapper">
       <div class="row align-bottom">
         <div class="col-lg-9 col-md-9 col-sm-12">
-          <span class="subtitle">SERVIÇOS</span>
-          <h2>Adicionamos valor<br> ao seu futuro</h2>
+          <span class="subtitle anim-delay-0-1">SERVIÇOS</span>
+          <h2><span class="anim-delay-0-2">Adicionamos</span> <span class="anim-delay-0-3">valor</span><br> <span class="anim-delay-0-4">ao</span> <span class="anim-delay-0-5">seu</span> <span class="anim-delay-0-6">futuro</span></h2>
         </div>
         <div class="col-lg-3 col-md-3 col-sm-12">
-          <a class="btn-blue-ball btn-dark" href="./servicos.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Os nossos Serviços</span></a>
+          <a class="btn-blue-ball btn-dark anim-delay-3" href="./servicos.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Os nossos Serviços</span></a>
         </div>
       </div>
     </div>
@@ -336,6 +336,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
+  <script src="https://unpkg.com/intersection-observer"></script>
+  <script src="https://unpkg.com/scrollama"></script>
   <script src="js/owl.carousel.js"></script>
   <script src="js/main.js"></script>
 
