--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
           <h2><span class="anim-delay-0-2">Estamos</span> <span class="anim-delay-0-3">sempre</span><br> <span class="anim-delay-0-4">a</span> <span class="anim-delay-0-5">aprender,</span> <span class="anim-delay-0-6">e</span><br> <span class="anim-delay-0-7">escrevemos</span> <span class="anim-delay-0-8">sobre</span> <span class="anim-delay-0-9">isso.</span></h2>
         </div>
         <div class="col-lg-3 col-md-3 col-sm-12">
-          <a class="btn-blue-ball btn-dark anim-delay-4" href="#"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Todos os Insights</span></a>
+          <a class="btn-blue-ball btn-dark anim-delay-4" href="./blog.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Todos os Insights</span></a>
         </div>
       </div>
     </div>
@@ -342,7 +342,7 @@
             <span class="subtitle anim-delay-0-5">SOMOS BUZZBEAT</span>
             <h2><span class="anim-delay-0-5">Somos</span> <span class="anim-delay-0-6">uma</span> <span class="anim-delay-0-7">equipa</span><br> <span class="anim-delay-0-8">de</span> <span class="anim-delay-0-9">especialistas</span><br> <span class="anim-delay-0-10">ao</span> <span class="anim-delay-0-11">seu</span> <span class="anim-delay-0-12">dispor</span></h2>
             <p class="anim-delay-0-12">Trabalhamos lado a lado para que os seus projetos alcancem o máximo potencial</p>
-            <a class="btn-blue-ball btn-dark anim-delay-4" href="#"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Sobre Nós</span></a>
+            <a class="btn-blue-ball btn-dark anim-delay-4" href="./sobre.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Sobre Nós</span></a>
           </div>
         </div>
       </div>
