--- a/servicos.html
+++ b/servicos.html
@@ -593,7 +593,7 @@
           <h2><span class="anim-delay-0-2">Trabalhamos</span> <span class="anim-delay-0-3">projetos</span><br> <span class="anim-delay-0-4">&</span> <span class="anim-delay-0-5">indústrias</span> <span class="anim-delay-0-6">nos</span> <span class="anim-delay-0-7">mais</span><br> <span class="anim-delay-0-8">variados</span> <span class="anim-delay-0-9">setores</span></h2>
         </div>
         <div class="col-lg-3 col-md-3 col-sm-12">
-          <a class="btn-blue-ball btn-dark anim-delay-4" href="#"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Todas as Indústrias</span></a>
+          <a class="btn-blue-ball btn-dark anim-delay-4" href="./industrias.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Todas as Indústrias</span></a>
         </div>
       </div>
     </div>
@@ -635,18 +635,18 @@
   </section>
 
   <footer>
-    <section class="footer-1">
+    <section class="footer-1 animista fade-in-bottom">
       <div class="wrapper">
         <div class="row align-center">
           <div class="col-lg-5 col-md-5 col-sm-12 order-second">
-            <span class="subtitle">Onde estamos</span>
-            <p class="address">Tagus Park, Edifício Núcleo Central 100,<br> Salas 342, 344, 346<br> 2740-122 Porto Salvo, Portugal</p>
-            <span class="subtitle">fale connosco</span><br>
-            <p><a href="tel:+351211383266">(+351) 211 383 266</a><br>
-            <a href="mailto:info@buzzbeat.pt">info@buzzbeat.pt</a></p>
+            <span class="subtitle anim-delay-1">Onde estamos</span>
+            <p class="address"><span class="anim-delay-2">Tagus Park, Edifício Núcleo Central 100,</span><br> <span class="anim-delay-3">Salas 342, 344, 346</span><br> <span class="anim-delay-4">2740-122 Porto Salvo, Portugal</span></p>
+            <span class="subtitle anim-delay-5">fale connosco</span><br>
+            <p><a class="anim-delay-6" href="tel:+351211383266">(+351) 211 383 266</a><br>
+            <a class="anim-delay-7" href="mailto:info@buzzbeat.pt">info@buzzbeat.pt</a></p>
           </div>
-          <div class="col-lg-7 col-md-7 col-sm-12 order-first">
-            <div class="footer-form">
+          <div class="col-lg-7 col-md-7 col-sm-12 order-first animista slide-in-right">
+            <div class="footer-form anim-delay-8">
               <span class="subtitle">FALE CONNOSCO</span>
               <h2>Vamos transformar<br> o seu negócio?</h2>
               <form>
@@ -660,19 +660,19 @@
         </div>
       </div>
     </section>
-    <div class="footer-2">
+    <div class="footer-2 animista fade-in-bottom">
       <div class="wrapper">
         <div class="row">
-          <div class="col-lg-12 col-md-12 col-sm-12 footer-logo">
+          <div class="col-lg-12 col-md-12 col-sm-12 footer-logo anim-delay-1">
             <img src="img/logo-dark.svg">
           </div>
         </div>
         <div class="row align-center">
           <div class="col-lg-6 col-md-6 col-sm-12">
-            <h4>A transformação do seu negócio<br> começa aqui e agora</h4>
+            <h4><span class="anim-delay-0-2">A</span> <span class="anim-delay-0-3">transformação</span> <span class="anim-delay-0-4">do</span> <span class="anim-delay-0-5">seu</span> <span class="anim-delay-0-6">negócio</span><br> <span class="anim-delay-0-7">começa</span> <span class="anim-delay-0-8">aqui</span> <span class="anim-delay-0-9">e</span> <span class="anim-delay-0-10">agora</span></h4>
           </div>
           <div class="col-lg-1 col-md-1 col-sm-12"></div>
-          <div class="col-lg-5 col-md-5 col-sm-12 newsletter">
+          <div class="col-lg-5 col-md-5 col-sm-12 newsletter anim-delay-4">
             <form>
               <input type="text" id="newsletter" name="newsletter" placeholder="Insira o seu email e receba conteúdos exclusivos"><br>
               <a href=""><div class="btn-send"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span></a>
