--- a/index.html
+++ b/index.html
@@ -175,44 +175,82 @@
     </div>
 
     <!-- Module Carousel -->
-    <div class="row">
-      <div class="col-lg-2 col-md-2"></div>
+    <style>
+      .scroll-wrapper .item {
+        max-width: 400px;
+        display: inline-block;
+        position: relative;
+        margin-right: 72px;
+      }
 
-      <div class="col-lg-10 col-md-10 col-sm-12 desktop">
-        <div class="carousel-wrapper spacer">
-            <div class="owl-carousel owl-theme right-slider">
-              <div class="item"><a href=""><img src="img/01-carousel-img.jpg"><span class="service-title">Criatividade</span></a></div>
-              <div class="item"><a href=""><img src="img/02-carousel-img.jpg"><span class="service-title">Marketing</span></a></div>
-              <div class="item"><a href=""><img src="img/03-carousel-img.jpg"><span class="service-title">Formação</span></a></div>
-              <div class="item"><a href=""><img src="img/04-carousel-img.jpg"><span class="service-title">E-commerce Performance</span></a></div>
-              <div class="item"><a href=""><img src="img/05-carousel-img.jpg"><span class="service-title">Consultoria & Estratégia</span></a></div>
-              <div class="item"><a href=""><img src="img/06-carousel-img.jpg"><span class="service-title">Transformação Digital</span></a></div>
-              <div class="item"><a href=""><img src="img/03-carousel-img.jpg"><span class="service-title">Consumer Insight</span></a></div>
-              <div class="item"><a href=""><img src="img/05-carousel-img.jpg"><span class="service-title">Inovação em Tecnologia</span></a></div>
-            </div>
+      .scroll-wrapper .item img {
+        max-width: 400px;
+      }
+
+      .scroll-wrapper {
+        white-space: nowrap;
+        position: absolute;
+      }
+
+      .scroll-wrapper .item a span {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        background-color: lightblue;
+        padding: 16px;
+        z-index: 3;
+      }
+
+      .scroll-animation-wrapper {
+        height: 310px;
+        margin-top: 96px;
+      }
+
+      .homepage.section-1{
+        transition: all .4s ease-in-out;
+      }
+    </style>
+    <div class="row">
+      <div class="scroll-animation-wrapper">
+        <div class="spacer">
+          <div class="scroll-wrapper">
+            <div class="item"><a href=""><img src="img/01-carousel-img.jpg"><span
+                  class="service-title">Criatividade</span></a></div>
+            <div class="item"><a href=""><img src="img/02-carousel-img.jpg"><span
+                  class="service-title">Marketing</span></a></div>
+            <div class="item"><a href=""><img src="img/03-carousel-img.jpg"><span
+                  class="service-title">Formação</span></a></div>
+            <div class="item"><a href=""><img src="img/04-carousel-img.jpg"><span class="service-title">E-commerce
+                  Performance</span></a></div>
+            <div class="item"><a href=""><img src="img/05-carousel-img.jpg"><span class="service-title">Consultoria &
+                  Estratégia</span></a></div>
+            <div class="item"><a href=""><img src="img/06-carousel-img.jpg"><span class="service-title">Transformação
+                  Digital</span></a></div>
+            <div class="item"><a href=""><img src="img/03-carousel-img.jpg"><span class="service-title">Consumer
+                  Insight</span></a></div>
+            <div class="item"><a href=""><img src="img/05-carousel-img.jpg"><span class="service-title">Inovação em
+                  Tecnologia</span></a></div>
+          </div>
         </div>
       </div>
-
-      <div class="col-lg-2 col-md-2"></div>
     </div>
-
     <!-- END Module Carousel -->
     
   </section>
 
-  <!-- Module Video Banner -->
-  <div class="animista slide-in-left">
-    <div class="video-banner-wrap anim-delay-1">
-      <div class="play-btn anim-delay-2"><img src="./img/play-btn.svg"></div>
-      <video poster="./img/video-homepage.jpg">
-        <source src="movie.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-    </div>
-  </div>
-  <!-- END Module Video Banner -->
-
   <section class="homepage section-2">
+
+    <!-- Module Video Banner -->
+    <div class="animista slide-in-left" style="margin-bottom: 118px;">
+      <div class="video-banner-wrap anim-delay-1">
+        <div class="play-btn anim-delay-2"><img src="./img/play-btn.svg"></div>
+        <video poster="./img/video-homepage.jpg">
+          <source src="movie.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+      </div>
+    </div>
+    <!-- END Module Video Banner -->
 
     <div class="wrapper">
       
@@ -443,6 +481,48 @@
   <script src="https://unpkg.com/scrollama"></script>
   <script src="js/owl.carousel.js"></script>
   <script src="js/main.js"></script>
+  <script>
+    $(document).ready(function () {
+      $('.scroll-wrapper').css({
+        'right': '-' + $('.scroll-wrapper').width() + 'px',
+      });
+
+      $(window).scroll(function () {
+        var scroll = $(window).scrollTop();
+
+        if (scroll >= 999) {
+          $('.homepage.section-1').css({
+            'position': 'fixed',
+            'top': 0,
+            'left': 0,
+            'height': '4000px',
+            'width': '100vw',
+            'opacity': 1,
+          });
+          $('.homepage.section-2').css('margin-top', '4800px');
+        } else{
+          $('.homepage.section-1').css('position', 'unset');
+        }
+      });
+
+      var $target = $(".scroll-wrapper").first(),
+        currentPosition = 0,
+        moveBy = function (scrolledBy) {
+          currentPosition += scrolledBy;
+          $target.css("transform", "translateX(" + (currentPosition) + "px)");
+          if(currentPosition < -4890){
+            $('.homepage.section-1').css('opacity', 0);
+          }
+        },
+        lastScrollTop = 0;
+
+      $(window).bind("scroll", function (e) {
+        var scrolledBy = $(window).scrollTop() - lastScrollTop;
+        moveBy(-scrolledBy);
+        lastScrollTop = $(window).scrollTop();
+      });
+    });
+  </script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
