--- a/industrias.html
+++ b/industrias.html
@@ -368,12 +368,38 @@
         </div>
       </div>
     </div>
-    <div class="service-wrapper odd">
+    <div class="full-width">
       <div class="row">
-        <div class="col-lg-2 col-md-2"></div>
-        <div class="col-lg-10 col-md-10 col-sm-12 desktop">
+        <div class="col-lg-12 col-md-12 col-sm-12 desktop">
           <div class="carousel-wrapper spacer">
               <div class="owl-carousel owl-theme">
+                <div class="item">
+                  <a href="./servicos.html">
+                    <div class="img-label-container">
+                      <img src="img/01-carousel-img.jpg">
+                      <span class="service-title">Consultoria & Estratégia</span>     
+                    </div>               
+                  </a>
+                  <p>Desenvolvemos planos para atingir os seus objetivos mais cedo.</p>
+                </div>
+                <div class="item">
+                  <a href="./servicos.html">
+                    <div class="img-label-container">
+                      <img src="img/02-carousel-img.jpg">
+                      <span class="service-title">Transformação Digital</span>
+                    </div>
+                  </a>
+                  <p>Breve descrição do serviço - o que fazemos para que o cliente queira saber mais - máx 2 linhas</p>
+                </div>
+                <div class="item">
+                  <a href="./servicos.html">
+                    <div class="img-label-container">
+                      <img src="img/03-carousel-img.jpg">
+                      <span class="service-title">Consumer Insight</span>
+                    </div>
+                  </a>
+                  <p>Breve descrição do serviço - o que fazemos para que o cliente queira saber mais - máx 2 linhas</p>
+                </div>
                 <div class="item">
                   <a href="./servicos.html">
                     <div class="img-label-container">
