--- a/servicos.html
+++ b/servicos.html
@@ -597,12 +597,35 @@
         </div>
       </div>
     </div>
-    <div class="service-wrapper odd">
+    <div class="full-width">
       <div class="row">
-        <div class="col-lg-2 col-md-2"></div>
-        <div class="col-lg-10 col-md-10 col-sm-12 desktop">
+        <div class="col-lg-12 col-md-12 col-sm-12 desktop">
           <div class="carousel-wrapper spacer">
               <div class="owl-carousel owl-theme">
+                <div class="item">
+                  <a href="industria-grande-distribuicao-e-consumo.html">
+                    <img src="img/01-industries-img.jpg">
+                    <span class="service-title">Grande Distribuição & Consumo</span>
+                  </a>
+                </div>
+                <div class="item">
+                  <a href="industria-grande-distribuicao-e-consumo.html">
+                    <img src="img/02-industries-img.jpg">
+                    <span class="service-title">Automóvel</span>
+                  </a>
+                </div>
+                <div class="item">
+                  <a href="industria-grande-distribuicao-e-consumo.html">
+                    <img src="img/03-industries-img.jpg">
+                    <span class="service-title">Saúde</span>
+                  </a>
+                </div>
+                <div class="item">
+                  <a href="industria-grande-distribuicao-e-consumo.html">
+                    <img src="img/04-industries-img.jpg">
+                    <span class="service-title">Retalho</span>
+                  </a>
+                </div>
                 <div class="item">
                   <a href="industria-grande-distribuicao-e-consumo.html">
                     <img src="img/01-industries-img.jpg">
