--- a/sobre.html
+++ b/sobre.html
@@ -95,7 +95,6 @@
 
   <div class="larger-wrapper animista fade-in-bottom">
     <div class="about video-banner-wrap anim-delay-3">
-      <div class="play-btn"><img src="./img/play-btn.svg"></div>
       <video poster="./img/video-about-us.jpg">
         <source src="movie.mp4" type="video/mp4">
         Your browser does not support the video tag.
@@ -206,12 +205,38 @@
         </div>
       </div>
     </div>
-    <div class="service-wrapper odd">
+    <div class="full-width">
       <div class="row">
-        <div class="col-lg-2 col-md-2"></div>
-        <div class="col-lg-10 col-md-10 col-sm-12 desktop">
+        <div class="col-lg-12 col-md-12 col-sm-12 desktop">
           <div class="carousel-wrapper spacer">
             <div class="owl-carousel owl-theme">
+              <div class="item">
+                <a href="">
+                  <div class="img-label-container">
+                    <img src="img/01-carousel-img.jpg">
+                    <span class="service-title">Consultoria & Estratégia</span>     
+                  </div>               
+                </a>
+                <p>Desenvolvemos planos para atingir os seus objetivos mais cedo.</p>
+              </div>
+              <div class="item">
+                <a href="">
+                  <div class="img-label-container">
+                    <img src="img/02-carousel-img.jpg">
+                    <span class="service-title">Transformação Digital</span>
+                  </div>
+                </a>
+                <p>Breve descrição do serviço - o que fazemos para que o cliente queira saber mais - máx 2 linhas</p>
+              </div>
+              <div class="item">
+                <a href="">
+                  <div class="img-label-container">
+                    <img src="img/03-carousel-img.jpg">
+                    <span class="service-title">Consumer Insight</span>
+                  </div>
+                </a>
+                <p>Breve descrição do serviço - o que fazemos para que o cliente queira saber mais - máx 2 linhas</p>
+              </div>
               <div class="item">
                 <a href="">
                   <div class="img-label-container">
@@ -332,7 +357,7 @@
       </div>
     </div>
   </footer>
-  
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
