nav-color and body

--- a/blog.html
+++ b/blog.html
@@ -85,7 +85,7 @@
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12">
           <span class="subtitle anim-delay-0-1">SOMOS CURIOSOS</span>
-          <h2><span class="anim-delay-0-2">Explore</span> <span class="anim-delay-0-3">os</span> <span class="anim-delay-0-4">nossos</span><br> <span class="anim-delay-0-5">artigos</span> <span class="anim-delay-0-6">&</span> <span class="anim-delay-0-7">casos</span> <span class="anim-delay-0-8">de</span> <span class="anim-delay-0-9">estudo</span></h2>
+          <h2><span class="anim-delay-0-2">Explore</span> <span class="anim-delay-0-3">os</span> <span class="anim-delay-0-4">nossos</span><br> <span class="anim-delay-0-5">artigos</span> <span class="anim-delay-0-6">de</span> <span class="anim-delay-0-7">opinião</span> <span class="anim-delay-0-8">e</span> <span class="anim-delay-0-9">casos</span> <span class="anim-delay-0-10">de</span> <span class="anim-delay-0-11">estudo</span></h2>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12"></div>
       </div>
@@ -189,7 +189,7 @@
         <div class="col-lg-6 col-md-6 col-sm-12">
           <div class="padding-left">
             <span class="subtitle anim-delay-0-2">SOMOS BUZZBEAT</span>
-            <h2><span class="anim-delay-0-3">Somos</span> <span class="anim-delay-0-4">uma</span> <span class="anim-delay-0-5">equipa</span><br> <span class="anim-delay-0-6">de</span> <span class="anim-delay-0-7">especialistas</span><br> <span class="anim-delay-0-8">ao</span> <span class="anim-delay-0-9">seu</span> <span class="anim-delay-0-10">dispor</span></h2>
+            <h2><span class="anim-delay-0-3">Uma</span> <span class="anim-delay-0-4">equipa</span><br> <span class="anim-delay-0-5">de</span> <span class="anim-delay-0-6">especialistas</span><br> <span class="anim-delay-0-7">ao</span> <span class="anim-delay-0-8">seu</span> <span class="anim-delay-0-9">dispor</span></h2>
             <p class="anim-delay-4">Trabalhamos lado a lado para que os seus projetos alcancem o máximo potencial</p>
             <a class="btn-blue-ball btn-dark anim-delay-5" href="./sobre.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Sobre Nós</span></a>
           </div>
