--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         <div class="wrapper">
           <nav class="main-nav desktop">
               <ul>
-                  <li><a href="index.html"><img src="img/logo-dark.svg"></a></li>
+                  <li class="logo-dark"><a href="index.html"><img src="img/logo-dark.svg"></a></li>
+                  <li class="logo-light"><a href="index.html"><img src="img/logo-light.svg"></a></li>
                   <li><a href="blog.html">Insights</a></li>
                   <li><a href="servicos.html">Serviços</a></li>
                   <li><a href="industrias.html">Indústrias</a></li>
@@ -168,7 +169,7 @@
           <h2><span class="anim-delay-0-2">Adicionamos</span> <span class="anim-delay-0-3">valor</span><br> <span class="anim-delay-0-4">ao</span> <span class="anim-delay-0-5">seu</span> <span class="anim-delay-0-6">futuro</span></h2>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <p class="anim-delay-3">Desenhamos a transformação do seu negócio com estratégia, tecnologia e criatividade, para que se possa focar nos seus clientes.</p>
+          <p class="anim-delay-3">Desenhamos a transformação do seu negócio com estratégia, tecnologia e criatividade. Para que concentre a sua atenção no mais importante: os seus clientes.</p>
           <a class="anim-delay-4 btn-blue-ball btn-light" href="./servicos.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Todos os Serviços</span></a>
         </div>
       </div>
@@ -303,12 +304,12 @@
 
   </section>
 
-  <section class="homepage section-3 animista fade-in-bottom">
+  <section class="homepage section-3 animista fade-in-bottom anchor-point">
     <div class="wrapper">
       <div class="row align-bottom">
         <div class="col-lg-9 col-md-9">
           <span class="subtitle anim-delay-0-1">INSIGHTS</span>
-          <h2><span class="anim-delay-0-2">Estamos</span> <span class="anim-delay-0-3">sempre</span><br> <span class="anim-delay-0-4">a</span> <span class="anim-delay-0-5">aprender,</span> <span class="anim-delay-0-6">e</span><br> <span class="anim-delay-0-7">escrevemos</span> <span class="anim-delay-0-8">sobre</span> <span class="anim-delay-0-9">isso.</span></h2>
+          <h2><span class="anim-delay-0-2">Estamos</span> <span class="anim-delay-0-3">sempre</span> <span class="anim-delay-0-4">a</span> <span class="anim-delay-0-5">aprender</span><br> <span class="anim-delay-0-6">e</span> <span class="anim-delay-0-7">escrevemos</span> <span class="anim-delay-0-8">sobre</span> <span class="anim-delay-0-9">isso</span></h2>
         </div>
         <div class="col-lg-3 col-md-3 col-sm-12">
           <a class="btn-blue-ball btn-dark anim-delay-4" href="./blog.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Todos os Insights</span></a>
@@ -377,8 +378,8 @@
         <div class="col-lg-6 col-md-6 col-sm-12">
           <div class="padding-left">
             <span class="subtitle anim-delay-0-5">SOMOS BUZZBEAT</span>
-            <h2><span class="anim-delay-0-5">Somos</span> <span class="anim-delay-0-6">uma</span> <span class="anim-delay-0-7">equipa</span><br> <span class="anim-delay-0-8">de</span> <span class="anim-delay-0-9">especialistas</span><br> <span class="anim-delay-0-10">ao</span> <span class="anim-delay-0-11">seu</span> <span class="anim-delay-0-12">dispor</span></h2>
-            <p class="anim-delay-0-12">Trabalhamos lado a lado para que os seus projetos alcancem o máximo potencial</p>
+            <h2><span class="anim-delay-0-5">Uma</span> <span class="anim-delay-0-6">equipa</span><br> <span class="anim-delay-0-7">de</span> <span class="anim-delay-0-8">especialistas</span><br> <span class="anim-delay-0-9">ao</span> <span class="anim-delay-0-10">seu</span> <span class="anim-delay-0-11">dispor</span></h2>
+            <p class="anim-delay-0-12">Trabalhamos em equipa consigo para que os seus projetos alcancem o máximo potencial</p>
             <a class="btn-blue-ball btn-dark anim-delay-4" href="./sobre.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Sobre Nós</span></a>
           </div>
         </div>
